thesis: Cascade changes due to removal of SAN to cache-vuln counter-examples

--- a/results/CACHE-VULN/CSR-INTEGRITY.tex
+++ b/results/CACHE-VULN/CSR-INTEGRITY.tex
@@ -3,25 +3,25 @@
     & & \minrv{0} & \minrv{1} & \minrv{2} & \minrv{3} & \minrv{p} & \minrv{0c} & \minrv{0p} & \minrv{1c} & \minrv{1p} \\
     \hline
     
-     & \minrv{r} & \PU & \PU & \PU & \PU & \multirow{2}{*}{\minrv{U}} & \multirow{2}{*}{\minrv{UN}}  & \multirow{2}{*}{\minrv{-R-}} & \multirow{2}{*}{\minrv{WB}} & \multirow{2}{*}{\minrv{L--}} \\ & \minrv{m} & \PT & \PT & \PT & \PT &&&&& \\
+     & \minrv{r} & \PT & \PT & \PU & \PT & \multirow{2}{*}{\minrv{U}} & \multirow{2}{*}{\minrv{WT}}  & \multirow{2}{*}{\minrv{L--}} & \multirow{2}{*}{\minrv{UN}} & \multirow{2}{*}{\minrv{---}} \\ & \minrv{m} & \PT & \PT & \PT & \PT &&&&& \\
     \hline
     
-    \multirow{2}{*}{\minrv{Store 0, 2}} & \minrv{r} &  &  &  &  &  &   &  &  &  \\ & \minrv{m} &  &  &  &  &&&&& \\
+    \multirow{2}{*}{\minrv{Store 1, 2}} & \minrv{r} &  &  &  &  &  &   &  &  &  \\ & \minrv{m} &  &  &  &  &&&&& \\
     \hline
     
-    \multirow{2}{*}{\minrv{Slt 2, 0, 0}} & \minrv{r} &  &  &  &  & \multirow{2}{*}{\minrv{M}} &   &  &  &  \\ & \minrv{m} &  &  &  &  &&&&& \\
+    \multirow{2}{*}{\minrv{Ecall}} & \minrv{r} &  &  &  &  & \multirow{2}{*}{\minrv{M}} &   &  &  &  \\ & \minrv{m} &  &  &  &  &&&&& \\
     \hline
     
-    \multirow{2}{*}{\minrv{San}} & \minrv{r} & \PT & \PT & \PT & \PT &  &   &  &  &  \\ & \minrv{m} &  &  &  &  &&&&& \\
+    \multirow{2}{*}{\minrv{Slt 2, 0, 3}} & \minrv{r} &  &  & \PT &  &  &   &  &  &  \\ & \minrv{m} &  &  &  &  &&&&& \\
     \hline
     
-    \multirow{2}{*}{\minrv{Load 2, 0}} & \minrv{r} &  &  & \PU &  &  &   &  &  &  \\ & \minrv{m} &  &  &  &  &&&&& \\
+    \multirow{2}{*}{\minrv{Load 1, 1}} & \minrv{r} &  & \PU &  &  &  &   &  &  &  \\ & \minrv{m} &  &  &  &  &&&&& \\
     \hline
     
-    \multirow{2}{*}{\minrv{Csrrc 1, 0, 2}} & \minrv{r} &  & \CT &  &  &  &   &  & \multirow{2}{*}{\minrv{UN}} &  \\ & \minrv{m} &  &  &  & \PU &&&&& \\
+    \multirow{2}{*}{\minrv{Csrrs 0, 3, 1}} & \minrv{r} &  &  &  &  &  &   &  &  &  \\ & \minrv{m} &  &  &  &  &&&&& \\
     \hline
     
-    \multirow{2}{*}{\minrv{Csrrc 3, 3, 2}} & \minrv{r} &  &  &  &  &  &   &  &  &  \\ & \minrv{m} &  &  &  &  &&&&& \\
+    \multirow{2}{*}{\minrv{Csrrs 0, 1, 1}} & \minrv{r} &  &  &  &  &  &   &  &  &  \\ & \minrv{m} &  &  &  &  &&&&& \\
     \hline
     
 \end{tabular}
