--- a/thesis/sections/results.tex
+++ b/thesis/sections/results.tex
@@ -447,15 +447,19 @@ These changes manage to introduce a vulnerability to the MINRV8 architecture.
 If assuming all assumptions introduced in section \ref{sec:assumptions}, nuXmv manages to find a counter-example for all three information flow properties.
 These are depicted in table \ref{tbl:cex-cache-vuln}.
 As usual, the traces for \smv{MEMORY_OP_INTEGRITY} (\ref{itm:prop-mem-i}) and \smv{CSR_INTEGRITY} (\ref{itm:prop-csr-i}) as depicted in tables \ref{tbl:cex-mem-i-cache-vuln} and \ref{tbl:cex-csr-i-cache-vuln} are highly similar.
-In both cases, the user-mode initially executes a \minrv{Store} instruction which is not reflected in memory.
-The changes are written to cache-only and therefore must target memory region one since this is set to be write-back cacheable.
-Here, it can be clearly seen that dropping memory privilege controls on cache-writes and -reads leads to certain states which are inconsistent with the MINRV8 specification since memory region one is locked and as neither the read- nor the write- bit is set, both user- and machine-mode should not be able to read from or write to memory region one.
+We will introduce the counter-example to property \smv{MEMORY_OP_INTEGRITY} \ref{itm:prop-mem-i} in detail now.
+Initially, user-mode executes a \minrv{Store} instruction which is not reflected in memory.
+Then, it reads from a \gls{csr} to put a trusted value into register 0.
+Interestingly, user-mode thereby aids machine-mode in sanitizing the registers since now, all registers contain trusted values.
+In the next step, a pending external interrupt is taken which leads to the transition to machine-mode.
+Machine-mode performs a load instruction targeting the same address as the user's store instruction which leads to an untrusted value being stored in register two.
+This value is then used to perform a load or store operation.
+
+The load in the fourth step resulting in an untrusted value means, the initial store must have been targeting the only region set cacheable which is region one in table \ref{tbl:cex-mem-i-cache-vuln} and region zero in table \ref{tbl:cex-csr-i-cache-vuln} respectively.
+Here, it can be seen that dropping memory privilege controls on cache-writes and -reads leads to states inconsistent with the MINRV8 specification.
+In table \ref{tbl:cex-mem-i-cache-vuln}, memory region one is locked and as neither the read- nor the write-bit is set, both user- and machine-mode should not be able to read from or write to memory region one.
 Yet, the cache-access succeeds.
 
-In the next step, a pending external interrupt is taken which leads to the transition to machine-mode.
-Machine-mode sanitizes the input registers and performs a load instruction targeting the same address as the user's store instruction.
-Which leads to an untrusted value being stored in register two.
-This value is then used to perform a load or store operation.
 In the case of the original cache-poisoning attack, the authors wrote to executable memory directly influencing what would be executed by System Management Mode.
 Since the MINRV8 model does not support a model of executable memory, it is not possible to implement this exact vulnerability.
 However, these counter-examples show that it is still possible to implement the very core of the cache poisoning attack into the MINRV8 model which leads to a similar vulnerability in the architecture.
